# Seeubot

./: .gitignore  CHANGELOG.md  Info.plist  README.ja.md  README.md  README.zh-CN.md  build.sh  index.html  install.ps1  install.sh  interview-qa.html
.claude/skills/seeybot-release/: SKILL.md
Sources/: AppDelegate.swift  CollapsedPill.swift  Components.swift  DashboardView.swift  FlowLayout.swift  Mascot.swift  Models.swift  NotchRootView.swift  NotchWindow.swift  RenderPreview.swift  SessionCollector.swift  SidesBar.swift  StatsStore.swift  Theme.swift  Updater.swift  WorkingMascotRunway.swift  main.swift
apps/windows/: README.md  index.html  install.ps1  package-lock.json  package.json  uninstall.ps1  vite.config.ts
apps/windows/src/: App.tsx  MascotCanvas.tsx  format.ts  styles.css  types.ts  windowFrame.ts
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/src/: main.rs
